force-app/main/default/objects/Luogo__c/fields/Capacita_massima__c.field-meta.xml
<CustomField>
    <fullName>Capacita_massima__c</fullName>
    <label>Capacità massima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>