force-app/main/default/objects/Luogo__c/fields/Indirizzo__c.field-meta.xml
<CustomField>
    <fullName>Indirizzo__c</fullName>
    <label>Indirizzo</label>
    <length>1</length>
    <type>Text</type>
</CustomField>