force-app/main/default/objects/Luogo__c/fields/Stanza__c.field-meta.xml
<CustomField>
    <fullName>Stanza__c</fullName>
    <label>Stanza</label>
    <length>50</length>
    <type>Text</type>
</CustomField>