force-app/main/default/objects/Luogo__c/fields/Stato__c.field-meta.xml
<CustomField>
    <fullName>Stato__c</fullName>
    <label>Stato</label>
    <type>TextArea</type>
</CustomField>